- Code optimizations to bring Data Crow's code in line with the latest version of Java.
- Tika has been upgraded to upgraded to version 2.4.1.
- PDFBox has been upgraded to 2.0.26. There a version 3 release candidate which I wanted
  to adopt but it's not compatible with Tika 2.4.1.
- Added better ISBN / EAN management and incorporated this into the e-book file import
  and various other places.

[Removed]
- The web module has been dropped for now. It would need to be completely rebuild to 
  run successfully on the latest version of Java. This will be rebuild at a later stage.

-----------------------------------------------------------------------------------------
Data Crow version 4.2.2 - Maintenance                              Released on 2017-08-23
-----------------------------------------------------------------------------------------

[Fixed]
- File Importer did not always find a correct match when using an online service.
  The match checker has been improved. 

[Changed]
- Updated most of the libraries to the latest version.
- Updated the database engine (HSQLDB) to version 2.4 (from 2.3.4)


-----------------------------------------------------------------------------------------
Data Crow version 4.2.1 - From ruin to riches                      Released on 2017-06-27
-----------------------------------------------------------------------------------------

[Fixed]
- Normal users could not log into Data Crow when starting the Data Crow server client.
- The installer did not run "As Administrator" in Windows, causing the Program Files
  folder to not be accessible to the installer. Made an investment in a new executable
  builder which does support running in elevated mode (automatically).
- Imdb.com search was broken. This was mainly caused by the free API turning private.
  I have opted in for the amount of 10 USD a month to keep this service alive 
  (http://www.omdbapi.com).

[Changed]