@@ -549,7 +549,7 @@ lblIcon = Icon
 lblIcons = Icons
 lblYes = Yes
 lblNo = No
-lblPicFileFilter = Images (JPeg/Gif/Bmp/Png/SVG)
+lblPicFileFilter = Any graphics file
 lblBckFileFilter = Data Crow backup file
 lblRemoveTrack = Remove Track
 lblAddChild = Add %1
