@@ -37,6 +37,14 @@ Data Crow version 4.3                                              Released on 2
   to adopt but it's not compatible with Tika 2.4.1.
 - Added better ISBN / EAN management and incorporated this into the e-book file import
   and various other places.
+- Image type support has been improved and now allows for the following file types to be 
+  imported / used as picture:
+  bmp, tf8, pic, rgbe, tif, ico, sgi, ham8, ham, wbmp, pam, pict, jbig2, ilbm, tpic, png, 
+  raw, JBIG2, pfm, lbm, pbm, psb, rgb8, emf, psd, cur, deep, tiff, pntg, gif, btiff, mac, 
+  tga, wmf, xyze, btf, pgm, dcx, jpeg, pct, jpg, pcx, svg, iff, rle, ppm, icns, hdr, jb2, 
+  JB2, db
+- Apache Batik has been been upgraded to version 1.14
+- Added TwelveMonkeys ImageIO libraries for easier support of other image types
 
 [Removed]
 - The web module has been dropped for now. It would need to be completely rebuild to 
